# chatbot-ui

./: LICENSE  README.md  app.py  buildspec.yml  callbacks.py  db_handler.py  dockerfile  layout.py  main.py  package-list.txt  project_highlights.md  pyproject.toml  requirements.txt
aws/: buildspec.yml  hello_world.py
code/: app.py  dockerfile
code/aws/: dockerfile
code/models/: chat_model.py
code/services/: chat_service.py
code/utils/: logger.py
services/: bot_service.py
