[tool.poetry]
name = "chatbot-ui"
version = "0.1.0"
description = "A streamlit application"
authors = ["Neha Duggirala <nsm.duggirala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
altair = "5.3.0"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
